--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,12 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  cloud_firestore: ^1.0.3
+  equatable: ^2.0.0
+  firebase_auth: ^1.0.1
+  firebase_core: ^1.0.2
+  http: ^0.13.1
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
