--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,8 +32,10 @@ dependencies:
   equatable: ^2.0.0
   firebase_auth: ^1.0.1
   firebase_core: ^1.0.2
+  flutter_bloc: 7.0.0
   http: ^0.13.1
   intl: ^0.17.0
+  provider: ^5.0.0
 
 dev_dependencies:
   flutter_test:
