--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   firebase_auth: ^1.0.1
   firebase_core: ^1.0.2
   flutter_bloc: 7.0.0
+  google_fonts: ^2.0.0
   http: ^0.13.1
   intl: ^0.17.0
   provider: ^5.0.0
@@ -53,8 +54,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
