--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,12 +27,15 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
+  another_flushbar: ^1.10.17
   cupertino_icons: ^1.0.2
   cloud_firestore: ^1.0.3
+  email_validator: ^2.0.1
   equatable: ^2.0.0
   firebase_auth: ^1.0.1
   firebase_core: ^1.0.2
   flutter_bloc: 7.0.0
+  flutter_spinkit: ^5.0.0
   google_fonts: ^2.0.0
   http: ^0.13.1
   intl: ^0.17.0
