--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   flutter_spinkit: ^5.0.0
   google_fonts: ^2.0.0
   http: ^0.13.1
+  image_picker: ^0.7.4
   intl: ^0.17.0
   material_design_icons_flutter: ^4.0.5955
   provider: ^5.0.0
