--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   equatable: ^2.0.0
   firebase_auth: ^1.0.1
   firebase_core: ^1.0.2
+  firebase_storage: ^8.0.3
   flutter_bloc: 7.0.0
   flutter_spinkit: ^5.0.0
   google_fonts: ^2.0.0
