--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,8 +32,8 @@ dependencies:
   cloud_firestore: ^1.0.3
   email_validator: ^2.0.1
   equatable: ^2.0.0
-  firebase_auth: ^1.0.1
-  firebase_core: ^1.0.2
+  firebase_auth: ^1.1.0
+  firebase_core: ^1.0.3
   firebase_storage: ^8.0.3
   flutter_bloc: 7.0.0
   flutter_spinkit: ^5.0.0
@@ -45,6 +45,7 @@ dependencies:
   provider: ^5.0.0
   random_string: ^2.1.0
   shimmer: ^2.0.0
+  qr_flutter: ^4.0.0
 
 dev_dependencies:
   flutter_test:
